# Task3-sem4

./: CMakeLists.txt  CString.cpp  CString.d  CString.hpp  CString0.cpp  CString0.d  CString0.hpp  CString0factory.cpp  CString0factory.d  CString0factory.hpp  CString1.cpp  CString1.d  CString1.hpp  CString1factory.cpp  CString1factory.d  CString1factory.hpp  data.txt  factory.hpp  functions.cpp  functions.d  functions.hpp  main.cpp  main.d  myapp
