cmake_minimum_required(VERSION 3.15)


project(CString)

set(CMAKE_CXX_STANDARD 14)



add_executable(CString main.cpp CString.cpp CString0.cpp CString1.cpp CString.hpp CString0.hpp CString1.hpp functions.cpp functions.hpp factory.hpp CString0factory.hpp CString0factory.cpp CString1factory.hpp CString1factory.cpp)
